[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Fonts/MainLabel.tres" type="DynamicFont" id=1]
[ext_resource path="res://game/UI/Menus/Buttons/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Backgrounds/Main_Menu_01.png" type="Texture" id=3]
[ext_resource path="res://assets/Fonts/Seven Oh Ess 8x8.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Fonts/Seven Oh Ess 8x16 Monospaced.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://game/UI/Menus/LoadGameMenu.gd" type="Script" id=6]
[ext_resource path="res://assets/Fonts/Seven Oh Ess 8x16.ttf" type="DynamicFontData" id=7]

[sub_resource type="Animation" id=1]
resource_name = "main_animation"
length = 30.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRectRight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10, 15, 20, 25, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.960784 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.960784 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.960784 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.960784 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRectLeft:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 10, 15, 20, 25, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.960784 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.960784 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.960784 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[node name="LoadGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectRight" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectLeft" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "main_animation"
anims/main_animation = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 880.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 1 )
text = "Cargar Partida"

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 265.0
margin_top = 62.0
margin_right = 615.0
margin_bottom = 451.0
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 1

[node name="Slot1" type="Panel" parent="VBoxContainer/Buttons"]
margin_top = 24.0
margin_right = 350.0
margin_bottom = 124.0
rect_min_size = Vector2( 350, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="Label" parent="VBoxContainer/Buttons/Slot1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "Slot 1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="VBoxContainer/Buttons/Slot1"]
margin_left = 7.0
margin_top = 44.0
margin_right = 165.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Room" type="Label" parent="VBoxContainer/Buttons/Slot1"]
margin_left = 190.0
margin_top = 44.0
margin_right = 348.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Salon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeElapsed" type="Label" parent="VBoxContainer/Buttons/Slot1"]
margin_left = 5.0
margin_top = 20.0
margin_right = 163.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 3 )
text = "Tiempo de partida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="VBoxContainer/Buttons/Slot1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -170.5
margin_top = -34.0
margin_right = 170.5
custom_fonts/font = SubResource( 2 )
text = "Cargar Partida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Buttons"]
margin_top = 128.0
margin_right = 350.0
margin_bottom = 132.0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/Buttons"]
margin_top = 136.0
margin_right = 350.0
margin_bottom = 140.0

[node name="Slot2" type="Panel" parent="VBoxContainer/Buttons"]
margin_top = 144.0
margin_right = 350.0
margin_bottom = 244.0
rect_min_size = Vector2( 350, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="Label" parent="VBoxContainer/Buttons/Slot2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "Slot 2"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="VBoxContainer/Buttons/Slot2"]
margin_left = 7.0
margin_top = 44.0
margin_right = 165.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Room" type="Label" parent="VBoxContainer/Buttons/Slot2"]
margin_left = 190.0
margin_top = 44.0
margin_right = 348.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Salon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeElapsed" type="Label" parent="VBoxContainer/Buttons/Slot2"]
margin_left = 5.0
margin_top = 20.0
margin_right = 163.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 3 )
text = "Tiempo de partida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="VBoxContainer/Buttons/Slot2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -170.5
margin_top = -34.0
margin_right = 170.5
custom_fonts/font = SubResource( 2 )
text = "Cargar Partida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/Buttons"]
margin_top = 248.0
margin_right = 350.0
margin_bottom = 252.0

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer/Buttons"]
margin_top = 256.0
margin_right = 350.0
margin_bottom = 260.0

[node name="Slot3" type="Panel" parent="VBoxContainer/Buttons"]
margin_top = 264.0
margin_right = 350.0
margin_bottom = 364.0
rect_min_size = Vector2( 350, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" type="Label" parent="VBoxContainer/Buttons/Slot3"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "Slot 3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="VBoxContainer/Buttons/Slot3"]
margin_left = 7.0
margin_top = 44.0
margin_right = 165.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Room" type="Label" parent="VBoxContainer/Buttons/Slot3"]
margin_left = 190.0
margin_top = 44.0
margin_right = 348.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Salon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeElapsed" type="Label" parent="VBoxContainer/Buttons/Slot3"]
margin_left = 5.0
margin_top = 20.0
margin_right = 163.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 3 )
text = "Tiempo de partida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="VBoxContainer/Buttons/Slot3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -170.5
margin_top = -34.0
margin_right = 170.5
custom_fonts/font = SubResource( 2 )
text = "Cargar Partida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 455.0
margin_right = 880.0
margin_bottom = 500.0
next_scene = "res://game/UI/Menus/MainMenu.tscn"

[node name="Label" parent="VBoxContainer/MenuButton" index="0"]
text = "Volver"

[node name="Sprite" parent="VBoxContainer/MenuButton" index="1"]
position = Vector2( 150.798, 23.2617 )

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_top = 504.0
margin_right = 880.0
margin_bottom = 504.0

[node name="NoSlot1" type="Label" parent="."]
visible = false
margin_left = 420.0
margin_top = 135.0
margin_right = 537.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 4 )
text = "No hay partida
guardada"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoSlot2" type="Label" parent="."]
visible = false
margin_left = 420.0
margin_top = 256.001
margin_right = 537.0
margin_bottom = 301.001
custom_fonts/font = SubResource( 4 )
text = "No hay partida
guardada"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoSlot3" type="Label" parent="."]
visible = false
margin_left = 420.0
margin_top = 372.002
margin_right = 537.0
margin_bottom = 417.002
custom_fonts/font = SubResource( 4 )
text = "No hay partida
guardada"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Buttons/Slot1/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Slot2/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Slot3/LoadGame" to="." method="_on_LoadGame_pressed"]

[editable path="VBoxContainer/MenuButton"]
